# aoc-plumber

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yaml
aoc_plumber/cli/: config.py  consts.py  logger.py  parse.py  run_cli.py
tests/: test_it.py  test_sanity.py
