[tool.poetry]
name = "aoc-plumber"
version = "0.4.0"
description = ""
authors = ["Alex <noelalexandre66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^9.0.2"
requests = "^2.32.3"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
