[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["aoc_plumber"]

[project]
name = "aoc-plumber"
version = "0.5.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Alex", email = "noelalexandre66@gmail.com" }
]

dependencies = [
"requests>=2.32.3",
"loguru>=0.7.3",
"pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2"]